# template_mplugin

./: CMakeLists.txt  Doxyfile.in  README.md
include/mico/: DummyBlock.h
include/mico/xxxxxx/: xxxxxx.h
include/mico/xxxxxx/flow/: DummyBlock.h
scripts/: install_dependencies_ci.sh
src/: DummyBlock.cpp  flow_factory.cpp
src/xxxxxx/: xxxxxx.cpp
src/xxxxxx/flow/: DummyBlock.cpp  flow_factory.cpp
